assets/css/style.css
body{
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

/****************************** Header styling ***************************************/

h2{   
    font-family: Arial, Helvetica, sans-serif;
    letter-spacing: 2px;
    color: black;
    font-weight: 800;
}

h2:hover{
    color: rgb(88, 88, 88);
}


#logo{
    float: left;
    font-size: 200%;
    margin-left: 30px;
}

#logo , #nav-links{
    line-height: 25px;
}

nav{
    font-weight: 700;
}

#nav-links{
    list-style-type:none;
    letter-spacing: 3px;
    font-family: Arial, Helvetica, sans-serif;
    opacity: 20;
}

#nav-links li{
    float:right;
    margin-right: 60px;
}

.nav-buttons{
    letter-spacing: 4px;
    color: black;
    text-decoration: none;
    font-size: 140%;
}

.active{
    border-bottom: 1.5px solid black;
}

.nav-buttons:hover{
    color: rgb(88, 88, 88);
}

/****************************** Hero image styling ***************************************/

#hero-image{
    height: 1000px;
    width: 100%;
    background: url(../images/football.jpg) no-repeat center center;

    animation-name: zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;

}


#hero-outer{
    height: 800px;
    width: 100%;
    overflow: hidden;
}

@keyframes zoom{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);    
    }
}


#text-one{
    position: absolute;
    color: white;
    font-style: italic;
    letter-spacing: 3px;
    top:200px;
    left:150px;
}

#text-two{
    position: absolute;
    color: white;
    font-style: italic;
    letter-spacing: 3px;
    top: 500px;
    left: 150px;
}

/****************************** Venue site styling ***************************************/


.first-text {
    width: 100%;
    text-align: center;
    padding: 200px;
    overflow: hidden;
    background: url(../images/venue1.jpg) no-repeat center center;
    filter: opacity(0.4);
    background-size: 90%;
    text-shadow: 5px 5px 10px red;
}

.first-text:hover{
    color:black;
    filter:opacity(1);
}

.second-text {
    width: 100%;
    text-align: center;
    padding: 200px;
    background: url(../images/venue2.jpg) no-repeat center center;
    filter: opacity(0.4);
    margin-top: 20px;
    background-size: 90%;
    text-shadow: 5px 5px 10px red;
}

.second-text:hover {
    color: black;
    filter: opacity(1)
}

.third-text {
    width: 100%;
    text-align: center;
    padding: 400px;
    overflow: hidden;
    background: url(../images/venue3.jpg) no-repeat center center;
    filter: opacity(0.4);
    margin-top: 20px;
    background-size: 90%;
    text-shadow: 5px 5px 10px red;
}

.third-text:hover {
    color: white;
    filter: opacity(1);
}

h1 {
    font-family:Arial, Helvetica, sans-serif;
    letter-spacing: 3px;
    font-weight: 700;
    margin-top: 70px;
}

p {
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    letter-spacing: 3px;
    font-weight: 600;
}

.third-text , p {
    padding-top:20px;
}

.mobile{
    font-size: x-large;
}
/****************************** book.html styling ***************************************/

.book-container {
    height: 800px;
    width: 100%;
    overflow: hidden;
    padding-inline: 500px;
    background: url(../images/football.jpg) no-repeat center center;
    text-align: center;
    color: white;
    padding-left: 100px;
    padding-right: 900px;
       
}

.container-form{
    margin-top: 100px;
}

form{
    display:grid;
    grid-row-gap: 10px;
}


.form-field{
    display: flex;
    justify-content: space-between;
}

input,select{
    padding: 10px 15px;
}

.btn{
    background-color: black;
    color: white;
    padding: 10px 20px;
    border:none;
    border-radius: 100px;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    -ms-border-radius: 100px;
    -o-border-radius: 100px;
    cursor: pointer;
    transition: all .3s;
    margin-left: 100px;
    margin-right: 100px;
}

.btn:hover{
    transform: scale(1.03);
    color:white;
}



/******************************footer styling ***************************************/
.footer-container{
    width: 100%;
    line-height: 5px;
}

.social-icons{
    display: flex;
    justify-content: center;
    margin-bottom: 5px;

}

.social-icons a {
    text-decoration: none;
    background-color: white;
    padding: 20px;
    margin-top: 2px;
}


.social-icons a {
    font-size: 2em;
    color: black;
    opacity: 20;
    border-radius: 70%;
}
.footer-bottom {
    display: flex;
    justify-content: center;
    color: black;
    opacity: 20;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.social-icons a:hover{
    background-color: rgb(88, 88, 88);
    transition: 0.5s;
}

/****************************** Responsive design***************************************/

@media screen and (max-width:650px ) {
    #hero-outer{
    width: 100%;
    height:800px;
    margin: 0 auto ;
    }

    #text-one , #text-two{
        left: 40px;
        font-size: 100%;
    }
    #logo {
        float: left;
        font-size: 120%;
        margin-left: 2px;
    }
    #nav-links li {
        letter-spacing: 1px;
        font-size: xx-small;
        margin-right: 15px;
    }
    #logo , #nav-links {
        line-height: 5px;
    }
    .footer-container {
        width: 100%;
        line-height: 20px;
    }
    .footer-bottom{
        font-size: 80%;
    }

    .first-text{
        height: 300px;
        padding-top: 10px;
    }
    .second-text{
        height: 300px;
        margin-top:3px;
        padding-top: 10px;
    }
    .third-text{
        height: 300px;
        margin-top: 3px;
        padding-top: 10px;
    }
    .mobile {
        font-size: small;
    }

}

@media screen and (max-width:1000px) {
    .first-text {
        height: 400px;
        padding-top: 100px;
        }
    
    .second-text {
        height: 400px;
        margin-top: 5px;
        padding-top: 100px;
        }
    
    .third-text {
        height: 400px;
        margin-top: 5px;
        padding-top: 100px;
        }
    .book-container{
        width: 100%;
        height:800px;
    }    
    form {
        font-size: 70%;
    }
    .book-container{
        padding-left: 50px;
        padding-right: 400px;
    }
    .mobile{
        font-size: x-large;
        margin-top: 5px;
    }
}

@media screen and (max-width:400px) {
    .first-text {
        height: 250px;
        padding: 5px;
    }

    .second-text {
        height: 250px;
        margin-top: 1px;
        padding: 5px;
    }

    .third-text {
        height: 250px;
        margin-top: 1px;
        padding: 5px;
    }
    .mobile{
        font-size: x-small;
    }
    .footer-container {
        width: 100%;
        line-height: 10px;
    }
    .footer-bottom {
        font-size: 70%;
    }
}

@media screen and (max-height:1369px) {
        #hero-outer {
            width: 100%;
            height: 900px;
         }
}

@media screen and (max-width:280px) {
    #hero-outer {
        width: 110%;
        height: 800px;
        margin: 0 auto;
    }
    #text-one, #text-two {
        left: 10px;
        font-size: 100%;
    }
    .footer-bottom {
        font-size: 60%;
    }
    .social-icons {
        display: flex;
        justify-content: center;
        margin-bottom: 2px;
        font-size: 50%;
    }
    #nav-links li {
        letter-spacing: 1px;
        font-size: 40%;
        margin-right: 2px;
    }
    
}

@media screen and (max-width:375px) {
    .first-text {
        height: 400px;
        padding-top: 2px;
    }

    .second-text {
        height: 400px;
        margin-top: 2px;
        padding-top: 2px;
    }

    .third-text {
        height: 400px;
        margin-top: 2px;
        padding-top: 2px;
    }

    .mobile {
        font-size: 50%;
    }
    .social-icons {
        font-size: 70%;
    }
    .footer-container{
        line-height: 10%;
    }

}

@media screen and (max-width:800px) {
    .first-text {
        height: 250px;
        padding: 10px;
    }

    .second-text {
        height: 250px;
        margin-top: 3px;
        padding: 10px;
    }

    .third-text {
        height: 250px;
        margin-top: 3px;
        padding-top: 10px;
    }

    .mobile {
        font-size: x-small;
    }
}

@media screen and (max-width:1434px){
    form {
        font-size: 100%;
    }
    
    .book-container {
        padding-left: 20px;
        padding-right: 400px;
    }
}

@media screen and (max-width:900px) {
    form {
        font-size: 80%;
    }

    .book-container {
        padding-left: 20px;
        padding-right: 200px;
    }
}

@media screen and (max-width:550px) {
    form {
        font-size: 70%;
    }

    .book-container {
        padding-left: 20px;
        padding-right: 20px;
    }
}

@media screen and (max-width:1166px) {
    #text-one, #text-two {
        left: 20px;
        font-size: 200%;
    }
    .third-text{
        padding: 40px;
    }

@media screen and (max-width:466px) {
    #text-one, #text-two {
        left: 20px;
        font-size: 150%;
    }
}

@media screen and (max-width:312px) {
    form {
        font-size: 40%;
    }

    .book-container {
        padding-left: 5px;
        padding-right: 5px;
    }

    #nav-links li {
        letter-spacing: 1px;
        font-size: 50%;
        margin-right: 2px;
    }
    #logo{
        font-size: 80%;
    }
}

